setup api & git action

--- a/.env
+++ b/.env
@@ -1,2 +1,26 @@
-BASE_URL=https://dummyjson.com
-JWT_SECRET=secret
+# DATABASE_URL='postgresql://postgres:root@localhost:5432/bekomik'
+# BASE_SERVER='http://localhost:8000'
+# PORT=8000
+# JWT_PUBLIC_KEY="MangaReaderJWTKey"
+
+NODE_ENV=production
+PORT=8087
+LOG_LEVEL=no-debug
+BASE_URL=http://localhost
+DATABASE_URL=postgresql://postgres:root@localhost:5432/bekomik
+BASE_SERVER=https://komikindo.tv
+BASE_SERVER_ANIME=https://samehadaku.ac
+JWT_PUBLIC_KEY=MangaReaderJWTKey
+
+SANDBOX_TRIPAY_URL=https://tripay.co.id/api-sandbox/payment/instruction
+SANDBOX_API_KEY=DEV-02WoM3KziHw7iGPzXJXXTFcDx5QU7YoTNxUEpO56
+SANDBOX_PRIVATE_KEY='jYeGz-wDzHi-m8X43-zkG0Z-FBt01'
+
+PRODUCTION_TRIPAY_URL=https://tripay.co.id/api/payment/instruction
+PRODUCTION_API_KEY=PROD-02WoM3KziHw7iGPzXJXXTFcDx5QU7YoTNxUEpO56 
+PRODUCTION_PRIVATE_KEY=jYeGz-wDzHi-m8X43-zkG0Z-FBt01
+
+# Sandbox
+TRIPAY_MERCHANT_CODE=T8584 
+
+# Production
