--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"next": "14.2.4",
 		"next-auth": "^4.24.7",
 		"next-themes": "^0.2.1",
+		"prettier": "^3.3.3",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-icons": "^5.2.1",
