--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@nextui-org/breadcrumbs": "^2.0.12",
 		"@nextui-org/button": "2.0.37",
 		"@nextui-org/calendar": "^2.0.11",
 		"@nextui-org/code": "2.0.32",
@@ -18,6 +19,7 @@
 		"@nextui-org/listbox": "2.1.25",
 		"@nextui-org/navbar": "2.0.36",
 		"@nextui-org/react": "^2.4.6",
+		"@nextui-org/skeleton": "^2.0.31",
 		"@nextui-org/snippet": "2.0.41",
 		"@nextui-org/switch": "2.0.33",
 		"@nextui-org/system": "2.2.5",
