--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"@react-aria/visually-hidden": "3.8.12",
 		"chart.js": "2.9.3",
 		"clsx": "2.1.1",
+		"embla-carousel-autoplay": "^8.2.1",
+		"embla-carousel-react": "^8.2.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
