--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-aria/visually-hidden": "3.8.12",
     "chart.js": "2.9.3",
     "clsx": "2.1.1",
+    "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "~11.1.1",
